--- a/app/package.json
+++ b/app/package.json
@@ -1,22 +1,48 @@
 {
-	"name": "app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
-	},
-	"type": "module"
+  "name": "frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@fontsource-variable/inter": "^5.0.8",
+    "@fontsource-variable/outfit": "^5.0.8",
+    "@modyfi/vite-plugin-yaml": "^1.0.4",
+    "@playwright/test": "^1.38.1",
+    "@rollup/plugin-dsv": "^3.0.2",
+    "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/kit": "^1.25.0",
+    "@tabler/icons-svelte": "^2.35.0",
+    "@tensorflow/tfjs": "^4.11.0",
+    "@tensorflow/tfjs-converter": "^4.11.0",
+    "@types/chart.js": "^2.9.38",
+    "@types/randomcolor": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "chart.js": "^4.4.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.33.2",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "randomcolor": "^0.6.2",
+    "svelte": "^4.2.1",
+    "svelte-canvas": "^0.9.3",
+    "svelte-chartjs": "^3.1.2",
+    "svelte-check": "^3.5.2",
+    "svelte-simple-modal": "^1.6.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "zod": "^3.22.2"
+  },
+  "type": "module"
 }
