--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,17 @@ jobs:
         node-version: '16'  # or the version you prefer
 
     - name: Install Dependencies
-      run: npm ci
+      run: |
+        cd app
+        npm ci
 
     - name: Build
-      run: npm run build
+      run: |
+        cd app
+        npm run build
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         branch: gh-pages
-        folder: build
+        folder: app/build
