main: Fixed directory issue in github workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies
       run: |
         cd app
-        npm ci
+        npm ci --legacy-peer-deps
 
     - name: Build
       run: |
